# weather-etl

./: .gitignore  LICENSE  README.api.md  README.md  api-requirements.txt  main.py  pyproject.toml  requirements.txt
extractors/: __init__.py  core.py  error.py  weather.py
tests/: test_core.py  test_weather.py
