[tool.poetry]
name = "weather-etl"
version = "0.1.0"
description = "Basic ETL for weather data"
authors = ["excal04"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
pandas = "^2.2.2"
starlette = "^0.37.2"
uvicorn = "^0.30.1"
structlog = "^24.2.0"
fastparquet = "^2024.5.0"
pytest = "^8.2.2"
coverage = "^7.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
